@@ -2,8 +2,17 @@ package com.retroeditor.model;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.ByteBuffer;
+import java.nio.CharBuffer;
+import java.nio.charset.CharacterCodingException;
+import java.nio.charset.Charset;
+import java.nio.charset.CharsetDecoder;
+import java.nio.charset.CodingErrorAction;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -13,6 +22,13 @@ import com.retroeditor.service.UserActionMonitor;
  * Modelo para el editor de texto
  */
 public class EditorModel {
+    private static final int BINARY_SNIFF_BYTES = 8192;
+    private static final List<Charset> TEXT_FALLBACK_CHARSETS = Arrays.asList(
+        StandardCharsets.UTF_8,
+        Charset.forName("windows-1252"),
+        StandardCharsets.ISO_8859_1
+    );
+
     private final Map<File, String> fileContents = new HashMap<>();
 
     /**
@@ -21,8 +37,25 @@ public class EditorModel {
      * @throws IOException Si ocurre un error al leer el archivo.
      */
     public void openFile(File file) throws IOException {
-        String content = Files.readString(file.toPath());
+        byte[] bytes = Files.readAllBytes(file.toPath());
+
+        if (looksLikeBinary(bytes)) {
+            throw new IOException("El archivo parece binario y no puede abrirse como texto directamente.");
+        }
+
+        String content = decodeWithFallback(bytes);
         
+        fileContents.put(file, content);
+        UserActionMonitor.fileOpened(file.getName(), file.length());
+    }
+
+    /**
+     * Fuerza la apertura del archivo como texto con codificación de un byte.
+     * Se usa cuando el usuario decide abrir un archivo potencialmente binario.
+     */
+    public void openFileAsSingleByteText(File file) throws IOException {
+        byte[] bytes = Files.readAllBytes(file.toPath());
+        String content = new String(bytes, StandardCharsets.ISO_8859_1);
         fileContents.put(file, content);
         UserActionMonitor.fileOpened(file.getName(), file.length());
     }
@@ -73,5 +106,42 @@ public class EditorModel {
     public void closeFile(File file) {
         fileContents.remove(file);
         UserActionMonitor.fileClosed(file.getName());
+    }
+
+    private String decodeWithFallback(byte[] bytes) throws IOException {
+        for (Charset charset : TEXT_FALLBACK_CHARSETS) {
+            try {
+                return decodeStrict(bytes, charset);
+            } catch (CharacterCodingException ignored) {
+                // Probar siguiente charset del fallback
+            }
+        }
+        throw new IOException("No se pudo decodificar el archivo con UTF-8, windows-1252 o ISO-8859-1.");
+    }
+
+    private String decodeStrict(byte[] bytes, Charset charset) throws CharacterCodingException {
+        CharsetDecoder decoder = charset.newDecoder()
+            .onMalformedInput(CodingErrorAction.REPORT)
+            .onUnmappableCharacter(CodingErrorAction.REPORT);
+        CharBuffer chars = decoder.decode(ByteBuffer.wrap(bytes));
+        return chars.toString();
+    }
+
+    private boolean looksLikeBinary(byte[] bytes) {
+        if (bytes == null || bytes.length == 0) return false;
+
+        int sampleLength = Math.min(bytes.length, BINARY_SNIFF_BYTES);
+        int controlCount = 0;
+
+        for (int i = 0; i < sampleLength; i++) {
+            int value = bytes[i] & 0xFF;
+            if (value == 0) return true;
+
+            boolean isControl = value < 32 && value != '\n' && value != '\r' && value != '\t' && value != '\f';
+            if (isControl) controlCount++;
+        }
+
+        double controlRatio = (double) controlCount / (double) sampleLength;
+        return controlRatio > 0.30d;
     }
 }
